--- a/HiChongSwift/AboutMe.storyboard
+++ b/HiChongSwift/AboutMe.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C94b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jtQ-Ya-60s">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jtQ-Ya-60s">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -2109,7 +2109,7 @@ DQ0
                                                             <outletCollection property="gestureRecognizers" destination="Gh0-fs-2ee" appends="YES" id="gxa-uB-m4T"/>
                                                         </connections>
                                                     </imageView>
-                                                    <imageView tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="breedingButton" translatesAutoresizingMaskIntoConstraints="NO" id="g7H-19-aUn">
+                                                    <imageView tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="breedingButton" translatesAutoresizingMaskIntoConstraints="NO" id="g7H-19-aUn">
                                                         <rect key="frame" x="74" y="3" width="95" height="33"/>
                                                         <gestureRecognizers/>
                                                         <connections>
@@ -2408,7 +2408,7 @@ DQ0
                                                 <action selector="switchStatusChanged:" destination="k6f-Bx-NcT" eventType="valueChanged" id="dyd-vM-ZiF"/>
                                             </connections>
                                         </switch>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oON-Xp-l4P">
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" misplaced="YES" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oON-Xp-l4P">
                                             <rect key="frame" x="469" y="12" width="42" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -2574,13 +2574,13 @@ DQ0
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sqMale" translatesAutoresizingMaskIntoConstraints="NO" id="5sc-S8-TIu">
                                     <rect key="frame" x="76" y="8" width="15" height="15"/>
                                 </imageView>
-                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="findSearch_03" translatesAutoresizingMaskIntoConstraints="NO" id="86P-nk-b5V">
+                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="findSearch_03" translatesAutoresizingMaskIntoConstraints="NO" id="86P-nk-b5V">
                                     <rect key="frame" x="142" y="8" width="20" height="20"/>
                                 </imageView>
-                                <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="findSearch_03" translatesAutoresizingMaskIntoConstraints="NO" id="iNU-8S-qwp">
+                                <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="findSearch_03" translatesAutoresizingMaskIntoConstraints="NO" id="iNU-8S-qwp">
                                     <rect key="frame" x="170" y="8" width="20" height="20"/>
                                 </imageView>
-                                <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="findSearch_03" translatesAutoresizingMaskIntoConstraints="NO" id="2SE-ot-AQO">
+                                <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="findSearch_03" translatesAutoresizingMaskIntoConstraints="NO" id="2SE-ot-AQO">
                                     <rect key="frame" x="198" y="8" width="20" height="20"/>
                                 </imageView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7aT-99-dli">
@@ -2682,7 +2682,7 @@ DQ0
         <!--About Me Modify Location View Controller-->
         <scene sceneID="Nh5-Mb-y5r">
             <objects>
-                <viewController id="5Gr-VF-KVa" customClass="AboutMeModifyLocationViewController" customModule="HiChongSwift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="modifyLocationID" id="5Gr-VF-KVa" customClass="AboutMeModifyLocationViewController" customModule="HiChongSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="e8M-8B-zJR"/>
                         <viewControllerLayoutGuide type="bottom" id="Pdd-hq-ojg"/>
