--- a/HiChongSwift/Square.storyboard
+++ b/HiChongSwift/Square.storyboard
@@ -905,7 +905,7 @@
         <image name="sqYongpin" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="RSl-ln-WDi"/>
+        <segue reference="M0g-Hd-thh"/>
         <segue reference="LiE-ao-Chi"/>
     </inferredMetricsTieBreakers>
 </document>
